fix size and spacing

--- a/template/styles/add-center.css
+++ b/template/styles/add-center.css
@@ -7,5 +7,17 @@
 }
 
 .grp {
-    margin: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.nav-element {
+    padding-left: 30px;
+}
+
+.grp-btn {
+    margin-left: 25px;
+    width: 100px;
 }
